--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
 <div class="thermometer-section">
     <h2>Donation Progress</h2>
     <div class="thermometer-container">
-        <img src="/thermometer.png" alt="Donation Thermometer" class="thermometer-image">
+        <img src="/thermometer.svg" alt="Donation Thermometer" class="thermometer-image">
     </div>
     <p class="last-updated">Last updated: {{ last_updated }}</p>
 </div>
