make dark mode look good

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -156,9 +156,27 @@ UnderDogs,https://example.com/underdogs.png,5010.00</pre>
                 <td>Yes</td>
             </tr>
             <tr>
-                <td><code>/thermometer.png</code></td>
+                <td><code>/thermometer-light.png</code></td>
                 <td>GET</td>
-                <td>Get thermometer image</td>
+                <td>Get thermometer image (light mode)</td>
+                <td>No</td>
+            </tr>
+            <tr>
+                <td><code>/thermometer-light.svg</code></td>
+                <td>GET</td>
+                <td>Get thermometer SVG (light mode)</td>
+                <td>No</td>
+            </tr>
+            <tr>
+                <td><code>/thermometer-dark.png</code></td>
+                <td>GET</td>
+                <td>Get thermometer image (dark mode)</td>
+                <td>No</td>
+            </tr>
+            <tr>
+                <td><code>/thermometer-dark.svg</code></td>
+                <td>GET</td>
+                <td>Get thermometer SVG (dark mode)</td>
                 <td>No</td>
             </tr>
             <tr>
